--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport" />
     <title>饮食觉察</title>
-    <!-- Wellness Typography: Lora + Raleway -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,21 +12,19 @@
         rel="stylesheet" />
     <style>
         :root {
-            /* Beauty/Spa/Wellness Color Palette */
-            --primary: #EC4899;
-            --primary-soft: #F9A8D4;
-            --secondary: #8B5CF6;
-            --background: #FDF2F8;
-            --text-main: #831843;
-            --text-sub: #9D174D;
-            --border: #FBCFE8;
+            /* 更鲜艳的色彩方案 */
+            --primary: #E91E8C;
+            --primary-soft: #FF6EB4;
+            --secondary: #7C3AED;
+            --background: #FFE4F0;
+            --background-dark: #FFD6E8;
+            --text-main: #6D1052;
+            --text-sub: #8B2469;
+            --border: #FFB8D8;
 
-            /* Soft UI Evolution Shadows */
-            --shadow-soft: 0 4px 20px rgba(236, 72, 153, 0.1);
-            --shadow-hover: 0 8px 30px rgba(236, 72, 153, 0.2);
-
-            /* Transitions */
-            --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            /* 强化阴影 */
+            --shadow-soft: 0 8px 32px rgba(233, 30, 140, 0.2);
+            --shadow-hover: 0 12px 48px rgba(233, 30, 140, 0.35);
         }
 
         * {
@@ -37,15 +34,15 @@
         }
 
         body {
-            font-family: 'Raleway', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'Raleway', sans-serif;
             min-height: 100vh;
             min-height: 100dvh;
-            background: var(--background);
+            background: linear-gradient(160deg, var(--background) 0%, var(--background-dark) 50%, #F8D4E8 100%);
             overflow: hidden;
             position: relative;
         }
 
-        /* 渐变光晕背景 - Organic Biophilic Style */
+        /* 更强烈的渐变光晕背景 */
         .glow-bg {
             position: fixed;
             top: 0;
@@ -60,37 +57,36 @@
         .glow-orb {
             position: absolute;
             border-radius: 50%;
-            filter: blur(100px);
-            opacity: 0.5;
-            animation: breathe 8s ease-in-out infinite;
+            filter: blur(60px);
+            animation: breathe 4s ease-in-out infinite;
         }
 
         .glow-orb-1 {
-            width: 400px;
-            height: 400px;
-            background: radial-gradient(circle, rgba(249, 168, 212, 0.6) 0%, transparent 70%);
-            top: -150px;
-            right: -100px;
+            width: 450px;
+            height: 450px;
+            background: radial-gradient(circle, rgba(255, 110, 180, 0.8) 0%, rgba(255, 110, 180, 0.3) 50%, transparent 70%);
+            top: -180px;
+            right: -120px;
             animation-delay: 0s;
         }
 
         .glow-orb-2 {
             width: 500px;
             height: 500px;
-            background: radial-gradient(circle, rgba(139, 92, 246, 0.3) 0%, transparent 70%);
+            background: radial-gradient(circle, rgba(124, 58, 237, 0.6) 0%, rgba(124, 58, 237, 0.2) 50%, transparent 70%);
             bottom: -200px;
-            left: -150px;
-            animation-delay: -3s;
+            left: -180px;
+            animation-delay: -1.5s;
         }
 
         .glow-orb-3 {
-            width: 300px;
-            height: 300px;
-            background: radial-gradient(circle, rgba(251, 207, 232, 0.7) 0%, transparent 70%);
-            top: 40%;
+            width: 350px;
+            height: 350px;
+            background: radial-gradient(circle, rgba(233, 30, 140, 0.7) 0%, rgba(233, 30, 140, 0.2) 50%, transparent 70%);
+            top: 35%;
             left: 50%;
             transform: translateX(-50%);
-            animation-delay: -5s;
+            animation-delay: -3s;
         }
 
         @keyframes breathe {
@@ -98,12 +94,12 @@
             0%,
             100% {
                 transform: scale(1) translateY(0);
-                opacity: 0.5;
+                opacity: 0.7;
             }
 
             50% {
-                transform: scale(1.1) translateY(-20px);
-                opacity: 0.7;
+                transform: scale(1.25) translateY(-25px);
+                opacity: 1;
             }
         }
 
@@ -120,73 +116,78 @@
             padding: 2rem;
         }
 
-        /* 问题卡片 - Soft UI Evolution */
+        /* 问题卡片 */
         .question-card {
             text-align: center;
-            max-width: 380px;
+            max-width: 400px;
             width: 100%;
             opacity: 0;
-            transform: translateY(30px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+            transform: translateY(40px) scale(0.95);
+            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
             pointer-events: none;
             position: absolute;
         }
 
         .question-card.active {
             opacity: 1;
-            transform: translateY(0);
+            transform: translateY(0) scale(1);
             pointer-events: auto;
             position: relative;
         }
 
         .question-card.exit {
             opacity: 0;
-            transform: translateY(-30px) scale(0.95);
+            transform: translateY(-40px) scale(0.95);
         }
 
-        /* Logo区域 */
+        /* Logo区域 - 更醒目 */
         .logo {
-            margin-bottom: 3rem;
+            margin-bottom: 2.5rem;
         }
 
         .logo-icon {
-            font-size: 4rem;
+            font-size: 5rem;
             margin-bottom: 1rem;
             display: inline-block;
-            animation: gentle-bounce 3s ease-in-out infinite;
+            animation: bounce-glow 2s ease-in-out infinite;
+            filter: drop-shadow(0 0 20px rgba(233, 30, 140, 0.5));
         }
 
-        @keyframes gentle-bounce {
+        @keyframes bounce-glow {
 
             0%,
             100% {
-                transform: translateY(0);
+                transform: translateY(0) scale(1);
+                filter: drop-shadow(0 0 20px rgba(233, 30, 140, 0.5));
             }
 
             50% {
-                transform: translateY(-8px);
+                transform: translateY(-12px) scale(1.05);
+                filter: drop-shadow(0 0 35px rgba(233, 30, 140, 0.8));
             }
         }
 
         .logo-text {
             font-family: 'Lora', serif;
+            font-size: 2.2rem;
+            font-weight: 700;
+            color: var(--text-main);
+            letter-spacing: 0.2em;
+            text-shadow: 0 2px 10px rgba(233, 30, 140, 0.2);
+        }
+
+        /* 问题文字 - 更醒目 */
+        .question-text {
+            font-family: 'Lora', serif;
             font-size: 1.8rem;
             font-weight: 600;
             color: var(--text-main);
-            letter-spacing: 0.15em;
-        }
-
-        /* 问题文字 - Lora for elegance */
-        .question-text {
-            font-family: 'Lora', serif;
-            font-size: 1.6rem;
-            font-weight: 500;
-            color: var(--text-main);
             margin-bottom: 2.5rem;
-            line-height: 1.8;
+            line-height: 1.7;
+            text-shadow: 0 2px 8px rgba(233, 30, 140, 0.15);
         }
 
-        /* 选项按钮 - Soft UI with improved contrast */
+        /* 选项按钮 - 更立体 */
         .options {
             display: flex;
             flex-direction: column;
@@ -201,87 +202,102 @@
         }
 
         .option-btn {
-            background: rgba(255, 255, 255, 0.85);
+            background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
-            border: 2px solid rgba(251, 207, 232, 0.5);
-            border-radius: 16px;
-            padding: 1.2rem 1.8rem;
+            border: 2px solid rgba(255, 184, 216, 0.8);
+            border-radius: 20px;
+            padding: 1.3rem 2rem;
             font-family: 'Raleway', sans-serif;
-            font-size: 1rem;
-            font-weight: 500;
+            font-size: 1.05rem;
+            font-weight: 600;
             color: var(--text-main);
             cursor: pointer;
-            transition: var(--transition);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 0.75rem;
+            gap: 0.8rem;
             box-shadow: var(--shadow-soft);
         }
 
         .options.two-col .option-btn {
             flex: 1;
-            min-width: 150px;
-            max-width: 170px;
+            min-width: 155px;
+            max-width: 175px;
         }
 
         .option-btn:hover {
             background: rgba(255, 255, 255, 1);
             border-color: var(--primary);
-            transform: translateY(-4px);
+            transform: translateY(-5px) scale(1.02);
             box-shadow: var(--shadow-hover);
         }
 
         .option-btn:active {
-            transform: scale(0.97) translateY(-2px);
+            transform: scale(0.96);
         }
 
         .option-btn.selected {
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
             border-color: transparent;
-            box-shadow: 0 10px 40px rgba(236, 72, 153, 0.4);
+            box-shadow: 0 12px 40px rgba(233, 30, 140, 0.5);
+            transform: scale(1.02);
         }
 
         .option-emoji {
-            font-size: 1.6rem;
+            font-size: 1.8rem;
         }
 
         .option-text {
             text-align: left;
         }
 
-        /* 进度指示器 */
+        /* 进度指示器 - 更明显 */
         .progress-dots {
             position: fixed;
             bottom: 3rem;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            gap: 0.75rem;
+            gap: 1rem;
             z-index: 10;
         }
 
         .progress-dot {
-            width: 10px;
-            height: 10px;
+            width: 14px;
+            height: 14px;
             border-radius: 50%;
-            background: rgba(236, 72, 153, 0.2);
-            transition: var(--transition);
+            background: rgba(233, 30, 140, 0.25);
+            transition: all 0.4s ease;
+            box-shadow: 0 2px 8px rgba(233, 30, 140, 0.1);
         }
 
         .progress-dot.active {
             background: var(--primary);
-            transform: scale(1.3);
-            box-shadow: 0 0 20px rgba(236, 72, 153, 0.5);
+            transform: scale(1.4);
+            box-shadow: 0 0 25px rgba(233, 30, 140, 0.7);
+            animation: dot-pulse 1.5s ease-in-out infinite;
         }
 
         .progress-dot.done {
             background: var(--primary);
+            box-shadow: 0 0 15px rgba(233, 30, 140, 0.5);
         }
 
-        /* 安全区域适配 */
+        @keyframes dot-pulse {
+
+            0%,
+            100% {
+                box-shadow: 0 0 25px rgba(233, 30, 140, 0.7);
+            }
+
+            50% {
+                box-shadow: 0 0 40px rgba(233, 30, 140, 1);
+            }
+        }
+
         @supports (padding-bottom: env(safe-area-inset-bottom)) {
             .progress-dots {
                 bottom: calc(2rem + env(safe-area-inset-bottom));
@@ -413,7 +429,6 @@
     </div>
 
     <script>
-        // 用户选择数据
         const userChoices = {
             time_of_day: null,
             mood: null,
@@ -422,7 +437,6 @@
             budget_level: null
         };
 
-        // 选项标签映射
         const choiceLabels = {
             time_of_day: { daytime: '阳光正好', nighttime: '夜幕降临' },
             mood: { stressed: '压力山大', homesick: '有点想家', finished_work: '终于忙完了', lonely: '有些孤单' },
@@ -437,19 +451,17 @@
         function selectOption(field, value, questionNum) {
             userChoices[field] = value;
 
-            // 高亮选中按钮
             const currentCard = document.getElementById('q' + questionNum);
             currentCard.querySelectorAll('.option-btn').forEach(btn => btn.classList.remove('selected'));
             event.currentTarget.classList.add('selected');
 
-            // 延迟后切换问题
             setTimeout(() => {
                 if (questionNum < totalQuestions) {
                     goToQuestion(questionNum + 1);
                 } else {
                     submitChoices();
                 }
-            }, 500);
+            }, 450);
         }
 
         function goToQuestion(num) {
@@ -465,11 +477,10 @@
                 const nextCard = document.getElementById('q' + num);
                 nextCard.classList.add('active');
                 document.getElementById('dot' + num).classList.add('active');
-            }, 400);
+            }, 350);
         }
 
         function submitChoices() {
-            // 保存到 sessionStorage
             sessionStorage.setItem('userChoices', JSON.stringify(userChoices));
             sessionStorage.setItem('choiceLabels', JSON.stringify({
                 time: choiceLabels.time_of_day[userChoices.time_of_day],
