--- a/result.html
+++ b/result.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport" />
     <title>正在寻找慰藉 - 饮食觉察</title>
-    <!-- Wellness Typography: Lora + Raleway -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,14 +12,14 @@
         rel="stylesheet" />
     <style>
         :root {
-            /* Beauty/Spa/Wellness Color Palette */
-            --primary: #EC4899;
-            --primary-soft: #F9A8D4;
-            --secondary: #8B5CF6;
-            --background: #FDF2F8;
-            --text-main: #831843;
-            --text-sub: #9D174D;
-            --border: #FBCFE8;
+            /* 更鲜艳的色彩 */
+            --primary: #E91E8C;
+            --primary-soft: #FF6EB4;
+            --secondary: #7C3AED;
+            --background: #FFE4F0;
+            --background-dark: #FFD6E8;
+            --text-main: #6D1052;
+            --text-sub: #8B2469;
         }
 
         * {
@@ -30,10 +29,10 @@
         }
 
         body {
-            font-family: 'Raleway', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: 'Raleway', sans-serif;
             min-height: 100vh;
             min-height: 100dvh;
-            background: var(--background);
+            background: linear-gradient(160deg, var(--background) 0%, var(--background-dark) 50%, #F8D4E8 100%);
             overflow: hidden;
             position: relative;
             display: flex;
@@ -41,7 +40,7 @@
             justify-content: center;
         }
 
-        /* 渐变光晕背景 */
+        /* 更强烈的光晕背景 */
         .glow-bg {
             position: fixed;
             top: 0;
@@ -56,36 +55,35 @@
         .glow-orb {
             position: absolute;
             border-radius: 50%;
-            filter: blur(120px);
-            opacity: 0.5;
-            animation: breathe 6s ease-in-out infinite;
+            filter: blur(80px);
+            animation: breathe 4s ease-in-out infinite;
         }
 
         .glow-orb-1 {
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, rgba(249, 168, 212, 0.7) 0%, transparent 70%);
+            width: 550px;
+            height: 550px;
+            background: radial-gradient(circle, rgba(255, 110, 180, 0.85) 0%, rgba(255, 110, 180, 0.3) 50%, transparent 70%);
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
         }
 
         .glow-orb-2 {
-            width: 350px;
-            height: 350px;
-            background: radial-gradient(circle, rgba(139, 92, 246, 0.4) 0%, transparent 70%);
-            top: 15%;
-            right: 5%;
-            animation-delay: -2s;
+            width: 400px;
+            height: 400px;
+            background: radial-gradient(circle, rgba(124, 58, 237, 0.65) 0%, rgba(124, 58, 237, 0.2) 50%, transparent 70%);
+            top: 10%;
+            right: -5%;
+            animation-delay: -1.5s;
         }
 
         .glow-orb-3 {
-            width: 300px;
-            height: 300px;
-            background: radial-gradient(circle, rgba(251, 207, 232, 0.8) 0%, transparent 70%);
-            bottom: 15%;
-            left: 5%;
-            animation-delay: -4s;
+            width: 350px;
+            height: 350px;
+            background: radial-gradient(circle, rgba(233, 30, 140, 0.75) 0%, rgba(233, 30, 140, 0.25) 50%, transparent 70%);
+            bottom: 10%;
+            left: -5%;
+            animation-delay: -3s;
         }
 
         @keyframes breathe {
@@ -93,12 +91,30 @@
             0%,
             100% {
                 transform: scale(1);
-                opacity: 0.5;
+                opacity: 0.8;
             }
 
             50% {
-                transform: scale(1.15);
-                opacity: 0.7;
+                transform: scale(1.3);
+                opacity: 1;
+            }
+        }
+
+        .glow-orb-1 {
+            animation-name: breathe-center;
+        }
+
+        @keyframes breathe-center {
+
+            0%,
+            100% {
+                transform: translate(-50%, -50%) scale(1);
+                opacity: 0.8;
+            }
+
+            50% {
+                transform: translate(-50%, -50%) scale(1.3);
+                opacity: 1;
             }
         }
 
@@ -107,49 +123,51 @@
             position: relative;
             z-index: 1;
             text-align: center;
-            max-width: 380px;
+            max-width: 400px;
             padding: 2rem;
         }
 
-        /* 情感图标 */
+        /* 情感图标 - 更大更亮 */
         .emotion-icon {
-            font-size: 5rem;
+            font-size: 6rem;
             margin-bottom: 2.5rem;
             display: inline-block;
-            animation: gentle-pulse 2.5s ease-in-out infinite;
+            animation: icon-pulse 2s ease-in-out infinite;
+            filter: drop-shadow(0 0 30px rgba(233, 30, 140, 0.6));
         }
 
-        @keyframes gentle-pulse {
+        @keyframes icon-pulse {
 
             0%,
             100% {
                 transform: scale(1);
-                opacity: 1;
+                filter: drop-shadow(0 0 30px rgba(233, 30, 140, 0.6));
             }
 
             50% {
-                transform: scale(1.08);
-                opacity: 0.9;
+                transform: scale(1.1);
+                filter: drop-shadow(0 0 50px rgba(233, 30, 140, 0.9));
             }
         }
 
-        /* 主文案 */
+        /* 主文案 - 更醒目 */
         .main-copy {
             font-family: 'Lora', serif;
-            font-size: 1.5rem;
-            font-weight: 500;
+            font-size: 1.65rem;
+            font-weight: 600;
             color: var(--text-main);
             line-height: 2;
             margin-bottom: 1.5rem;
             opacity: 0;
             animation: fadeInUp 0.8s ease-out 0.3s forwards;
+            text-shadow: 0 2px 12px rgba(233, 30, 140, 0.2);
         }
 
         /* 副文案 */
         .sub-copy {
             font-family: 'Raleway', sans-serif;
-            font-size: 1rem;
-            font-weight: 400;
+            font-size: 1.1rem;
+            font-weight: 500;
             color: var(--text-sub);
             margin-bottom: 3.5rem;
             opacity: 0;
@@ -159,7 +177,7 @@
         @keyframes fadeInUp {
             from {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: translateY(25px);
             }
 
             to {
@@ -168,36 +186,36 @@
             }
         }
 
-        /* 加载指示器 */
+        /* 加载指示器 - 更明显 */
         .loading-container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 1.2rem;
+            gap: 1.5rem;
             opacity: 0;
             animation: fadeInUp 0.8s ease-out 0.9s forwards;
         }
 
         .loading-dots {
             display: flex;
-            gap: 0.6rem;
+            gap: 0.8rem;
         }
 
         .loading-dot {
-            width: 12px;
-            height: 12px;
+            width: 16px;
+            height: 16px;
             border-radius: 50%;
             background: linear-gradient(135deg, var(--primary), var(--secondary));
-            animation: bounce 1.4s ease-in-out infinite;
-            box-shadow: 0 4px 15px rgba(236, 72, 153, 0.3);
+            animation: bounce 1.2s ease-in-out infinite;
+            box-shadow: 0 4px 20px rgba(233, 30, 140, 0.5);
         }
 
         .loading-dot:nth-child(2) {
-            animation-delay: 0.2s;
+            animation-delay: 0.15s;
         }
 
         .loading-dot:nth-child(3) {
-            animation-delay: 0.4s;
+            animation-delay: 0.3s;
         }
 
         @keyframes bounce {
@@ -205,20 +223,21 @@
             0%,
             80%,
             100% {
-                transform: scale(0.6);
+                transform: scale(0.5) translateY(0);
                 opacity: 0.4;
             }
 
             40% {
-                transform: scale(1.1);
+                transform: scale(1.2) translateY(-15px);
                 opacity: 1;
             }
         }
 
         .loading-text {
-            font-size: 0.95rem;
+            font-size: 1rem;
+            font-weight: 500;
             color: var(--text-sub);
-            letter-spacing: 0.05em;
+            letter-spacing: 0.08em;
         }
 
         /* 错误状态 */
@@ -233,26 +252,26 @@
 
         .retry-btn {
             margin-top: 1.5rem;
-            padding: 1rem 2.5rem;
+            padding: 1.1rem 2.5rem;
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
             border: none;
-            border-radius: 16px;
+            border-radius: 20px;
             font-family: 'Raleway', sans-serif;
-            font-size: 1rem;
+            font-size: 1.05rem;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
-            box-shadow: 0 8px 25px rgba(236, 72, 153, 0.3);
+            box-shadow: 0 10px 30px rgba(233, 30, 140, 0.4);
         }
 
         .retry-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 12px 35px rgba(236, 72, 153, 0.4);
+            transform: translateY(-4px);
+            box-shadow: 0 15px 45px rgba(233, 30, 140, 0.5);
         }
 
         .retry-btn:active {
-            transform: scale(0.97);
+            transform: scale(0.96);
         }
     </style>
 </head>
@@ -302,57 +321,56 @@
         const SUPABASE_URL = 'https://lqqdhlxcfmdgxdayxxsi.supabase.co';
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxxcWRobHhjZm1kZ3hkYXl4eHNpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk2OTQzNzAsImV4cCI6MjA4NTI3MDM3MH0.TkFKzi_UgHjvzgK1zH4thEjQ3fuuotAPwjfkwptdvqU';
 
-        // 文案模板库 - 根据心情组合生成
+        // 心情关键词映射 - 用于饿了么搜索
+        const moodKeywords = {
+            stressed: '麻辣烫',
+            homesick: '家常菜',
+            finished_work: '火锅',
+            lonely: '一人食'
+        };
+
+        // 文案模板库
         const copyTemplates = {
-            // 夜晚 + 压力
             'nighttime_stressed': {
                 icon: '🌙',
                 main: '夜深了，你还在扛着。<br>一份温热的外卖正在路上。',
                 sub: '让它替你说一声：辛苦了。'
             },
-            // 夜晚 + 想家
             'nighttime_homesick': {
                 icon: '🏠',
                 main: '想家的夜晚，格外漫长。<br>熟悉的味道，能治愈一切。',
                 sub: '妈妈的味道，正在飞奔而来。'
             },
-            // 夜晚 + 忙完
             'nighttime_finished_work': {
                 icon: '🎉',
                 main: '终于可以歇口气了。<br>夜宵时间，你值得拥有。',
                 sub: '犒劳自己，从这一口开始。'
             },
-            // 夜晚 + 孤单
             'nighttime_lonely': {
                 icon: '🍵',
                 main: '一个人的夜晚，也可以温暖。<br>热腾腾的食物，是最好的陪伴。',
                 sub: '今晚，让美食陪伴你。'
             },
-            // 白天 + 压力
             'daytime_stressed': {
                 icon: '☕',
                 main: '忙碌的一天，别忘了犒劳自己。<br>吃饱了，才有力气继续战斗。',
                 sub: '给自己一点喘息的时间。'
             },
-            // 白天 + 想家
             'daytime_homesick': {
                 icon: '🥘',
                 main: '想家的时候，吃一口熟悉的味道。<br>家的感觉，其实从未远离。',
                 sub: '一碗家常菜，温暖你的胃和心。'
             },
-            // 白天 + 忙完
             'daytime_finished_work': {
                 icon: '✨',
                 main: '完成了！<br>是时候好好犒劳一下自己了。',
                 sub: '你值得最棒的那一口。'
             },
-            // 白天 + 孤单
             'daytime_lonely': {
                 icon: '🍽️',
                 main: '一个人吃饭，也是一种享受。<br>好好对待自己的胃。',
                 sub: '一人食，也可以很幸福。'
             },
-            // 默认
             'default': {
                 icon: '🍜',
                 main: '美食正在路上...<br>稍等片刻，温暖即将送达。',
@@ -390,26 +408,38 @@
 
                 const data = await response.json();
 
-                // 保存推荐到后台（静默）
-                await saveRecommendation(data);
+                // 保存推荐到后台
+                saveRecommendation(data);
 
-                // 获取关键词
+                // 获取关键词 - 优先使用AI返回的，否则用心情映射
                 const firstRec = data.recommendations?.[0];
-                const keyword = firstRec?.jump_keyword || firstRec?.food_name || '外卖';
+                let keyword = firstRec?.jump_keyword || firstRec?.food_name;
 
-                // 构建饿了么链接
-                const elemeUrl = `https://h5.ele.me/miniapp/search/?keyword=${encodeURIComponent(keyword)}`;
+                // 如果没有关键词，用心情映射
+                if (!keyword) {
+                    keyword = moodKeywords[userChoices.mood] || '外卖';
+                }
 
-                // 延迟跳转，让用户看文案
-                setTimeout(() => {
-                    window.location.href = elemeUrl;
-                }, 2500);
+                // 跳转饿了么
+                jumpToEleme(keyword);
 
             } catch (error) {
                 console.error('获取推荐失败:', error);
-                document.getElementById('loadingContainer').style.display = 'none';
-                document.getElementById('errorState').classList.add('show');
+                // 即使失败也跳转，用心情关键词
+                const keyword = moodKeywords[userChoices.mood] || '外卖';
+                jumpToEleme(keyword);
             }
+        }
+
+        // 跳转饿了么
+        function jumpToEleme(keyword) {
+            // 饿了么H5搜索链接
+            const elemeUrl = `https://h5.ele.me/msite/search/?query=${encodeURIComponent(keyword)}`;
+
+            // 延迟跳转让用户看文案
+            setTimeout(() => {
+                window.location.href = elemeUrl;
+            }, 2500);
         }
 
         // 保存推荐到数据库
@@ -419,7 +449,7 @@
 
                 const record = {
                     user_token: userToken,
-                    food_name: data.recommendations?.[0]?.food_name || '未知',
+                    food_name: data.recommendations?.[0]?.food_name || '待选择',
                     price: parseFloat(data.recommendations?.[0]?.estimated_price) || 0,
                     fullness: 2,
                     mood: 'satisfied',
@@ -428,7 +458,7 @@
                     created_at: new Date().toISOString()
                 };
 
-                await fetch(`${SUPABASE_URL}/rest/v1/meal_reviews`, {
+                fetch(`${SUPABASE_URL}/rest/v1/meal_reviews`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
