feat: 重构result.html - 推荐卡片 + 多平台智能跳转 + 我已下单按钮

--- a/review-history.html
+++ b/review-history.html
@@ -142,7 +142,7 @@
     <nav
         class="fixed bottom-0 left-0 right-0 bg-card-light dark:bg-card-dark border-t border-[#f0e6da] dark:border-[#4a3a2f] px-4 py-2">
         <div class="max-w-md mx-auto flex justify-around">
-            <a href="index.html"
+            <a href="code.html"
                 class="flex flex-col items-center py-2 px-4 text-text-sub hover:text-primary transition-colors">
                 <span class="material-symbols-outlined text-xl">restaurant_menu</span>
                 <span class="text-xs mt-1">想吃啥</span>
